syntax = "proto3";

option go_package = "/strutcspb";

message Struct1 {
  int64 field1 = 1;
  bool field2 = 2;
  bool field3 = 3;
}

message Struct2 {
  bool field1 = 1;
  int64 field2 = 2;
  bool field3 = 3;
}

message Struct3 {
  bool field1 = 1;
  bool field2 = 2;
  int64 field3 = 3;
}